src/forms/css/objects/_honeycomb.forms.objects.hubspot.scss
/*
 * HubSpot included JS sets inputs to 95%. Force it to 100% width!
 */
.hs-input {
    width: 100% !important;
    &[type="checkbox"],
    &[type="radio"] {
        width: 20px !important;
        height: 20px;
    }
    &[type="checkbox"] {
        margin-right: 10px;
    }

    &.error {
        &:not([type="checkbox"]):not([type="radio"]) {
            border: 2px solid color('red', 5);
        }
    }
}

.hs-form {

    &-field {
        @extend .form__field-container;
    }

    fieldset {
        max-width: none !important;
    }
    li {
        list-style-type: none;
    }
    .multi-container {
        @include margin(0, left);
        list-style: none;

        label {
            font-weight: normal;

            input {
                @include margin(0.25, right);
            }
        }

        input {
            @include margin(0, bottom);
        }
    }
    .hs-button {
        @extend %button--primary;
    }

    .hs-error-msgs {
        @include margin(0, 'left');

        &, label {
            @include margin(0.1, 'top');
            color: color('red', 'brand');
            font-weight: normal;
        }
    }
}

@include responsive("small") {
  .hbspt-form .hs-form fieldset.form-columns-2 .hs-form-field { /* excessively specific to overwrite hubspot css */
    width: 100%;
  }
}

